--- a/templates/stock.html
+++ b/templates/stock.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>{{ symbol }} Stock Price</h1>
+    <img src="{{ graph_file }}" alt="{{ symbol }} Stock Graph">
     <table>
         <thead>
             <tr>
@@ -31,5 +32,6 @@
             {% endfor %}
         </tbody>
     </table>
+    <p>Next closing price prediction: ${{ next_closing_price }}</p>
 </body>
 </html>
